# ejatlas-data

./: 05-extract_additional_data_clean.ipynb  README.md  pyproject.toml
final/: dataset_2.csv  dataset_2.xlsx  dataset_3.csv  dataset_3.xlsx
raw/: company_names.xlsx  conflict_intensity.csv  conflict_intensity.json  conflict_intensity.xlsx  details_and_actors.xlsx  details_and_actors_companies.csv  details_and_actors_companies.json  details_and_actors_companies.xlsx  details_and_actors_government_actors.csv  details_and_actors_government_actors.json  details_and_actors_government_actors.xlsx  details_and_actors_supporters.csv  details_and_actors_supporters.json  details_and_actors_supporters.xlsx  impacts.csv  impacts.json  impacts.xlsx  impacts_environmental_impact.csv  impacts_environmental_impact.json  impacts_environmental_impact.xlsx  impacts_health_impact.csv  impacts_health_impact.json  impacts_health_impact.xlsx  impacts_socio_economical_impact.csv  impacts_socio_economical_impact.json  impacts_socio_economical_impact.xlsx  metainformation.csv  metainformation.json  metainformation.xlsx  mobilization_forms_mobilizing.csv  mobilization_forms_mobilizing.json  mobilization_forms_mobilizing.xlsx  mobilization_groups_mobilizing.csv  mobilization_groups_mobilizing.json  mobilization_groups_mobilizing.xlsx  outcome.csv  outcome.json  outcome.xlsx  outcome_conflict_event.csv  outcome_conflict_event.json  (+36 more)
