[project]
name = "ejatlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "argilla>=2.8.0",
    "cleanlab[all]>=2.7.1",
    "cleanvision>=0.3.6",
    "datasets>=2.14.4",
    "evaluate>=0.4.5",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "plotly-express>=0.4.1",
    "pyarrow==20.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.12",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
    "torch-optimi>=0.3.2",
    "torchvision>=0.23.0",
    "transformers>=4.56.1",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.0.5",
    "xlsxwriter>=3.2.5",
]
